@@ -61,6 +61,7 @@ void initconstants(void)
 	DEC_CONST(RESIZABLE);
 	DEC_CONST(ASYNCBLIT);
 	DEC_CONST(OPENGL);
+	DEC_CONST(OPENGLBLIT)
 	DEC_CONST(ANYFORMAT);
 	DEC_CONST(HWPALETTE);
 	DEC_CONST(DOUBLEBUF);
